# G.E.A.M

./: CMakeLists.txt  README.md  my_gazebo  package.xml
config/: left_arm_twist_estimation.yaml  left_arm_wrench_estimation.yaml  lwr_joint_state_estimator_config.yaml  mugD_left_arm_ft_calib_data.yaml  mugD_left_arm_ft_calib_data_conflict-20160404-140928.yaml  mugD_left_arm_ft_calib_meas.txt  mugD_left_arm_ft_calib_meas_conflict-20160404-140928.txt  object_clustering_recognition_params.yaml  single_lwr_config.rviz  vito_left_arm_ft_calib.yaml  vito_left_arm_ft_calib_data.yaml  vito_left_arm_ft_calib_meas.txt
exp/txt/: data.txt
exp/txt/apple/grasp_0/: apple_grasp_0_data.txt
exp/txt/apple/grasp_1/: apple_grasp_1_data.txt
exp/txt/apple/grasp_2/: apple_grasp_2_data.txt
exp/txt/mug/grasp_0/: mug_grasp_0_data.txt
exp/txt/pot/grasp_0/: pot_grasp_0_data.txt
exp/txt/pot/grasp_2/: pot_grasp_2_data.txt
exp/yaml/: 2025_database.yaml  centroid.yaml  copy_database.yaml  database.yaml  database_2.yaml  database_final.yaml  extended_database.yaml  flann_database.hdf5  flann_index.idx  multi_test_database_final.yaml  real_database.yaml  simulation_database.yaml
include/: FT_sensor_calib.h
include/grasp_estimator/: gazebo_ros_ft_sensor.h
include/utils/: pseudo_inversion.h
launch/: GEAM.launch  box_spawer.launch  box_spawner.launch  cog_estim.launch  containerA_spawner.launch  cylinder_spawer.launch  cylinder_spawner.launch  jug_spawner.launch  lwr_joint_state_estimator.launch  mugD_spawner.launch  multi_test_offline_object_clustering_recognition.launch  object_clustering_recognition.launch  offline_object_clustering_recognition.launch  pot_spawner.launch  setup_simulation.launch  sphere_spawner.launch  twist_estimator.launch  vito_contact_point_estimation.launch  vito_joint_state_estimator.launch  wrench_estimator.launch
model/: box.urdf.xacro  containerA.urdf.xacro  cylinder.urdf.xacro  jug.urdf.xacro  mugD.urdf.xacro  pot.urdf.xacro  sphere.urdf.xacro
msg/: DataAcquired.msg  Goal.msg  GraspShape.msg  ObjectRecognition.msg  VolumeEstimated.msg  WeightEstimated.msg
rqt/: joint_state_estimator_accelerations_GEAM.perspective  joint_state_estimator_positions_GEAM.perspective  joint_state_estimator_velocities_GEAM.perspective
src/: cog_estimation.cpp  data_acquiring.cpp  data_acquiring_server.cpp  example_mean_std.cpp  ft_sensor_calib.cpp  gazebo_ros_ft_sensor.cpp  grasp_shape_estimation.cpp  grasp_state_data_server.cpp  grasp_state_data_server_2.cpp  hand_control.cpp  left_arm_planning.cpp  left_hand_arm_data_acquiring.cpp  multi_test_offline_object_clustering_recognition.cpp  multi_test_offline_object_clustering_recognition_conflict-20160426-181740.cpp  object_clustering_recognition.cpp  offline_object_clustering_recognition.cpp  ping_left_arm_planning.cpp  ping_left_arm_planning_home.cpp  ping_right_arm_planning.cpp  ping_right_arm_planning_home.cpp  pre_flann_object_clustering_recognition.cpp  right_arm_planning.cpp  right_hand_planning.cpp  test_data_acquiring.cpp  test_object_in_hand_left_arm_planning.cpp  test_object_in_hand_right_arm_planning.cpp  test_right_arm_planning.cpp  twist_estimation.cpp  volume_estimation.cpp  weight_estimation.cpp  wrench_estimation.cpp
srv/: ArmPlanning.srv  DataAcquiring.srv
